--- a/my_app/public/index.html
+++ b/my_app/public/index.html
@@ -30,7 +30,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/fevicon/fevicon.png" />
     <link rel="icon" href="%PUBLIC_URL%/images/fevicon/fevicon.png" type="image/gif" />
     <!-- bootstrap css -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/bootstrap.min.css" /> -->
     <!-- Site css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
     <!-- responsive css -->
@@ -66,15 +66,15 @@
   </body>
 
 
-  <script type="text/javascript" src="%PUBLIC_URL%/js/jquery.min.js"></script>
-  <script type="text/javascript" src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+  <!-- <script type="text/javascript" src="%PUBLIC_URL%/js/jquery.min.js"></script> -->
+  <!-- <script type="text/javascript" src="%PUBLIC_URL%/js/bootstrap.min.js"></script> -->
   <!-- menu js -->
   <script type="text/javascript" src="%PUBLIC_URL%/js/menumaker.js"></script>
-  <!-- wow animation -->
+  
   <script type="text/javascript" src="%PUBLIC_URL%/js/wow.js"></script>
-  <!-- custom js -->
+
   <script type="text/javascript" src="%PUBLIC_URL%/js/custom.js"></script>
-  <!-- revolution js files -->
+  
   <script type="text/javascript" src="%PUBLIC_URL%/revolution/js/jquery.themepunch.tools.min.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/revolution/js/jquery.themepunch.revolution.min.js"></script>
   <script type="text/javascript" src="%PUBLIC_URL%/revolution/js/extensions/revolution.extension.actions.min.js"></script>
@@ -184,7 +184,7 @@
                   ]
            });
            
-             var image = '%PUBLIC_URL%/images/it_service/location_icon_map_cont.png';
+            //  var image = require('%PUBLIC_URL%/images/it_service/location_icon_map_cont.png');
              var beachMarker = new google.maps.Marker({
                position: {lat: 40.645037, lng: -73.880224},
                map: map,
@@ -193,7 +193,7 @@
            }
         </script>
   <!-- google map js -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"></script> -->
 
 
 
